Downloads/2025ccp1-team33-main/test/parser/bad/b_bad_class_def.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

class A(B, C):
    x: int = 1